crossrepostatus: trim to cross-repo content only
Single-repo open work and DONE history was moved into per-repo
TODO.md files in the 4 sibling repos this session. This file no
longer carries:

- BAF-only / jllama-only / plugin-only / sb-only sections
- BAF @VisibleForTesting site-by-site deep-dive
- Per-repo naming audit deep-dives (totals row kept)
- Per-repo "session deltas" rows
- The historical "What materially changed vs. the seed" section
- The migration-tracking "CLAUDE.md TODO list staleness" section

What remains is genuinely cross-repo material:

- "In parity across all 4 repos" — the strictness-ladder dimensions
  in lock-step (EP promotions, NullAway options, tool versions,
  banned-deps, -parameters, PIT, Checker, module-info, ArchUnit
  standard set, -Werror).
- "Deliberate non-parity" — the four documented intentional choices.
- VERIFIED TABLE — rows that span ≥ 2 repos only.
- "Cross-repo open items" — what is still open that affects ≥ 2 repos.
- Naming audit totals — multi-repo comparison; all 21 items closed.

Net: 429 → 113 lines, focused on what spans more than one repo.

https://claude.ai/code/session_01LzoKmqzgtQsELS5tsH4Wog